[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["stream", "blocking", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
url = "2.4"
path-slash = "0.2"
futures = "0.3"
rayon = "1.8"
dashmap = "5.5"
